tdf#161583 sw: a11y check: warn about flys with RES_URL with no "name"

Fly frames can have hyperlinks too.

Change-Id: I80da4b53e44e6f82a4f37f4b2aa859b8475b452a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182577
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>